--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="book_details_label">Описание</string>
     <string name="book_title_label">Заголовок</string>
     <string name="date_picker_title">Дата начала прочтения:</string>
+    <string name="new_book">Новая книга</string>
+    <string name="show_subtitle">Показать подзаголовок</string>
+    <string name="hide_subtitle">Скрыть подзаголовок</string>
+    <string name="subtitle_format">%1$d книг</string>
+
 </resources>
